--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/follow-redirects": "^1.14.1",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "@types/styled-components": "^5.1.26",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "follow-redirects": "^1.15.2",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.10",
+    "swiper": "^9.4.0",
+    "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
